added flexbox style

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,27 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.itineraryCreator-container {
+  display: flex;
+  flex-direction: column;
+}
+
+/* .flex-container-col {
+  justify-content: space-between;
+
+} */
+
+.itineraryCreator-panel {
+  display: flex;
+  flex-direction: row;
+}
+
+.itineraryCreator-panel > div {
+  background-color: #f1f1f1;
+  width: 100px;
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  font-size: 30px;
+}
