--- a/src/styles.css
+++ b/src/styles.css
@@ -19,10 +19,30 @@
 }
 
 .itineraryCreator-panel > div {
-  background-color: #f1f1f1;
+  background-color: #e9e9e9;
   width: 100px;
   margin: 10px;
   text-align: center;
   line-height: 75px;
   font-size: 30px;
+}
+
+hr {
+  width: 100%;
+  height: 2px;
+  background: #878787;
+  box-shadow: 2px 2px 2px #e9e9e9;
+  margin: 10px 0;
+  display: block;
+  border: none;
+}
+
+.itinerary-description-text {
+  max-width: 100%;
+  min-width: 100px;
+  height: 7em;
+  padding: 10px 10px 10px 10px;
+  margin: 8px 10px 8px 10px;
+  box-sizing: border-box;
+  top: -5;
 }
