--- a/src/styles.css
+++ b/src/styles.css
@@ -32,9 +32,9 @@ hr {
   height: 2px;
   background: #878787;
   box-shadow: 2px 2px 2px #e9e9e9;
-  margin: 10px 0;
   display: block;
   border: none;
+  margin: 8px 10px 8px 10px;
 }
 
 .itinerary-description-text {
@@ -45,4 +45,13 @@ hr {
   margin: 8px 10px 8px 10px;
   box-sizing: border-box;
   top: -5;
+}
+
+.panel-image {
+  display: block;
+  max-width: 230px;
+  max-height: 50px;
+  width: auto;
+  height: auto;
+  margin-right: 20px;
 }
