--- a/src/styles.css
+++ b/src/styles.css
@@ -13,24 +13,10 @@
 
 } */
 
-.itineraryCreator-panel {
-  display: flex;
-  flex-direction: row;
-}
-
-.itineraryCreator-panel > div {
-  background-color: #e9e9e9;
-  width: 100px;
-  margin: 10px;
-  text-align: center;
-  line-height: 75px;
-  font-size: 30px;
-}
-
 hr {
   width: 100%;
   height: 2px;
-  background: #878787;
+  background: #cfcecf;
   box-shadow: 2px 2px 2px #e9e9e9;
   display: block;
   border: none;
@@ -45,13 +31,4 @@ hr {
   margin: 8px 10px 8px 10px;
   box-sizing: border-box;
   top: -5;
-}
-
-.panel-image {
-  display: block;
-  max-width: 230px;
-  max-height: 50px;
-  width: auto;
-  height: auto;
-  margin-right: 20px;
 }
