--- a/src/itinerayCreation.css
+++ b/src/itinerayCreation.css
@@ -1,13 +1,7 @@
 .itineraryCreator-panel {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   margin: 10px;
-}
-
-.panel-image {
-  max-width: 230px;
-  max-height: 50px;
-  margin-right: 20px;
 }
