--- a/src/itinerayCreation.css
+++ b/src/itinerayCreation.css
@@ -3,5 +3,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin: 10px;
+  margin: 0.7em;
+  max-width: 50em;
 }
