--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  /* height: c;
+  width: 100vh; */
+}
+
+body {
+  max-width: 60em;
+  min-width: 30em;
+  padding: 2em;
+  /* height: 100%;
+  width: 100%; */
 }
 
 hr {
@@ -20,5 +30,6 @@ hr {
   padding: 10px 10px 10px 10px;
   margin: 8px 10px 8px 10px;
   box-sizing: border-box;
-  top: -5;
+  /* top: -5; */
+  /* vertical-align: top; */
 }
