--- a/src/styles.css
+++ b/src/styles.css
@@ -20,16 +20,13 @@ hr {
   box-shadow: 2px 2px 2px #e9e9e9;
   display: block;
   border: none;
-  margin: 8px 10px 8px 10px;
+  margin: 1em 1em 1em 1em;
 }
 
 .itinerary-description-text {
-  max-width: 100%;
-  min-width: 100px;
+  width: 100%;
+  min-width: 7em;
   height: 7em;
-  padding: 10px 10px 10px 10px;
-  margin: 8px 10px 8px 10px;
-  box-sizing: border-box;
-  /* top: -5; */
-  /* vertical-align: top; */
+  margin-left: 1em;
+  padding: 0.5em;
 }
