--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 .App {
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   text-align: center;
   /* height: c;
   width: 100vh; */
