--- a/src/itinerayCreation.css
+++ b/src/itinerayCreation.css
@@ -24,9 +24,10 @@
 .titlePanel {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   width: 100%;
   text-align: left;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .titlePanelImage {
