--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ body {
   width: 100%; */
 }
 
-hr {
+.topHr {
   width: 100%;
   height: 2px;
   background: #cfcecf;
@@ -25,10 +25,24 @@ hr {
   margin: 1em 1em 1em 1em;
 }
 
+.bottomHr {
+  width: 100%;
+  height: 2px;
+  background: #cfcecf;
+  box-shadow: 2px 2px 2px #e9e9e9;
+  display: block;
+  border: none;
+  margin: 2em 1em 1em 1em;
+}
+
 .itinerary-description-text {
   width: 100%;
   min-width: 7em;
   height: 7em;
   margin-left: 1em;
   padding: 0.5em;
+}
+
+.addDayImageButton {
+  text-align: left;
 }
