--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ body {
   box-shadow: 2px 2px 2px #e9e9e9;
   display: block;
   border: none;
-  margin: 2em 1em 1em 1em;
+  margin: 1em 1em 1em 1em;
 }
 
 .itinerary-description-text {
@@ -45,4 +45,13 @@ body {
 
 .addDayImageButton {
   text-align: left;
+}
+
+.dayBottomPanel {
+  display: flex;
+}
+
+.addDayButtonText {
+  font-size: 1em;
+  color: black;
 }
